--- a/zbirka-chatgpt/todo.txt
+++ b/zbirka-chatgpt/todo.txt
@@ -1,5 +1,4 @@
 todo:
 
-* add Settings page
-* store API key
-* add list of prev conversations
+* add list of prev conversations and switch to selected conversation
+* add better output syntax
